[tool.poetry]
name = "passphraser"
version = "0.1.0"
description = ""
authors = ["Maxim Motyshen <m.motyshen@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pyinstaller = "^4.9"
termcolor = "^1.1.0"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
autopep8 = "^1.6.0"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
